Realização da estilização

--- a/semana1/sistema-loja/template-loja/index.html
+++ b/semana1/sistema-loja/template-loja/index.html
@@ -5,33 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nome da Loja</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline+Text:wght@500&display=swap" rel="stylesheet">
+    <title>Hot Pink</title>
 </head>
 
 <body>
     <div>
-        <h1>Bem-vind@ ao <em>nome da loja</em>!</h1>
-        <p>Frase de chamada para sua loja</p>
+        <h1>Bem-vind@ a <em>Hot Pink </em></h1>
+        <p id="initial">E-commerce de grandes marcas com preços abaixo do mercado!!</p>
     </div>
 
-    <div>
+    <div id="box">
         <a href="./index.html">Página Inicial</a>
         <a href="./ctrl-estoque.html">Controle de Estoque</a>
         <a href="./add-produto.html">Adicionar Produto</a>
         <a href="./funcionarios.html">Funcionários</a>
     </div>
 
-    <div>
-        <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
+    <div id="context">
+        A Hot Pink nasceu em 2020 em meio a pandemia com o intuito de levar a casa do consumidor seu desejo de forma rápida e prática, sem burocracia e sem sair de moda. As peças mais usadas entre os famosos e nos looks das passarelas de todo o mundo com os melhores
+        preços do mercado.
     </div>
 
-    <div>
-        <p>Siga-nos nas redes sociais!</p>
+
+
+    <div id="icons">
+        <p>Siga-nos nas redes sociais</p>
 
         <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png" />
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png" />
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png" />
+            <img class="icons" src="https://image.flaticon.com/icons/png/512/25/25305.png" />
+            <img class="icons" src="https://image.flaticon.com/icons/png/512/25/25425.png" />
+            <img class="icons" src="https://image.flaticon.com/icons/png/512/8/8800.png" />
         </div>
     </div>
 </body>
