--- a/semana1/sistema-loja/template-loja/add-produto.html
+++ b/semana1/sistema-loja/template-loja/add-produto.html
@@ -5,15 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline+Text:wght@500&display=swap" rel="stylesheet">
+
     <title>Adicionar Produto</title>
 </head>
 
 <body>
     <div>
-        <p>Nome da lojinha</p>
+        <h1>Hot Pink</h1>
     </div>
 
-    <div>
+    <div id="box">
         <a href="./index.html">Página Inicial</a>
         <a href="./ctrl-estoque.html">Controle de Estoque</a>
         <a href="./add-produto.html">Adicionar Produto</a>
@@ -22,7 +25,7 @@
 
 
     <h2>Adicionar Produto</h2>
-    <form action="">
+    <form action="#">
         <div>
             <label for="link-foto">Link para foto: </label>
             <input type="url" id="link-foto" name="link-foto">
