--- a/semana1/sistema-loja/template-loja/ctrl-estoque.html
+++ b/semana1/sistema-loja/template-loja/ctrl-estoque.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline+Text:wght@500&display=swap" rel="stylesheet">
     <title>Controle de Estoque</title>
 </head>
 
 <body>
     <div>
-        <p>Nome da lojinha</p>
+        <h1>Hot Pink</h1>
     </div>
 
-    <div>
+    <div id="box">
         <a href="./index.html">Página Inicial</a>
         <a href="./ctrl-estoque.html">Controle de Estoque</a>
         <a href="./add-produto.html">Adicionar Produto</a>
@@ -22,7 +24,7 @@
 
     <h2>Controle de Estoque</h2>
 
-    <table>
+    <table id="produtos">
         <tr>
             <th>Foto</th>
             <th>Descrição</th>
@@ -30,14 +32,14 @@
             <th>Quantidade disponível</th>
         </tr>
 
-        <tr>
+        <tr class="produto">
             <td><img src="./img/moletom.jpeg" alt="Moletom" /></td>
             <td> Moletom </td>
             <td> R$50,00 </td>
             <td> 50 peças </td>
         </tr>
 
-        <tr>
+        <tr class="produto">
             <td><img src="./img/camiseta.jpeg" alt="Camiseta" /></td>
             <td> Camiseta </td>
             <td> R$25,00 </td>
