Realização da estilização do sistema de loja

--- a/semana1/sistema-loja/template-loja/funcionarios.html
+++ b/semana1/sistema-loja/template-loja/funcionarios.html
@@ -29,7 +29,7 @@
         <li>Cristiane Valentina - Controle</l1>
             <li>Daiane Valeria - Administração</li>
             <li>Marcos Batista- Financeiro</li>
-            <li>Vicente Ferreira Motorista</li>
+            <li>Vicente Ferreira - Motorista</li>
             <li>Amanda Vasconcelos - telefonista</li>
             <li>Viviane Elenir - Recursos Humanos</li>
             <li>Pedro Afonso -CEO</li>
