Realização do portifolio

--- a/semana1/portfolio/contato.html
+++ b/semana1/portfolio/contato.html
@@ -34,18 +34,21 @@
 
 
 
+
         <form name="formulario">
 
-            <p><b>Nome:</b><br>
-                <input type=text name="nome" size="45"></p><br>
-            <p><b>Email:</b><br>
-                <input type=text name="email" size="45"></p><br>
-            <p><b>Assunto:</b><br>
-                <input type=text name="assunto" size="45"></p><br>
-            <p><b>Mensagem:</b><br>
-                <textarea name="Mensagem" rows="10" cols="60"></textarea></p><br>
-            <p>
-                <input type="submit" value="Enviar "> </p>
+            <p>Nome:</p>
+            <input type=text name="nome" size="45">
+            <p>Email:</p>
+            <input type=text name="email" size="45">
+            <p>Assunto:</p>
+            <input type=text name="assunto" size="45">
+            <p>Mensagem:</p>
+            <textarea name="Mensagem" rows="10" cols="60"></textarea>
+
+            <button type="submit" value="Enviar ">Enviar</button>
+
+
         </form>
 
 
