Realização da atividade portifolio

--- a/semana1/portfolio/portifolio.html
+++ b/semana1/portfolio/portifolio.html
@@ -36,7 +36,7 @@
 
 
         <h3>Projeto Seleção Labenu</h3>
-        <a href="./labenu/index.html" target="_blank"><img src="./labenu/Labenu_logo.png" alt="Projeto Seleção Labenu"></a>
+        <a href="./projeto-labenu.html" target="_blank"><img src="./labenu/Labenu_logo.png" alt="Projeto Seleção Labenu"></a>
 
 
 
