--- a/semana1/portfolio/projeto-labenu.html
+++ b/semana1/portfolio/projeto-labenu.html
@@ -27,29 +27,19 @@
 
     <div class="main">
 
+        <h1>Detalhes do Projeto</h2>
+            <p>Projeto realizado com intuido de simular o site da escola de desenvolvimento Labenu, etapa de seleção do processo seletivo.</p>
+
+
+
+            <a href="./labenu/index.html" target="_blank"><img src="./projeto-labenu.png" alt="Projeto Seleção Labenu"></a>
+
+            <h3>Tecnologias utilizadas</h3>
+            <p>Html CSS JavaScript</p>
 
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <a class="end" href="./projeto-labenu.html">Veja o Projeto</a>
 
 
 </body>
