Texto da tabela alinhado ao centro, utilizando text-align center

--- a/semana2/bugfixes/comprar.html
+++ b/semana2/bugfixes/comprar.html
@@ -42,8 +42,10 @@
         </table>
     </div>
     <div>
-        <a href="./home.html"> <button id="back-button">
-            VOLTAR</button></a>
+        <a href="./home.html">
+            <button id="back-button">
+            VOLTAR</button>
+        </a>
     </div>
 </body>
 
